# hmpy

./: .gitignore  LICENSE  README.md  hmpy.py  pyproject.toml  requirements.txt
.github/workflows/: test-run.yml
tests/: conftest.py  test_hm_intergration.py
tests/resources/: task_1470.json
